--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@wangeditor/editor": "^5.0.1",
+    "@wangeditor/editor-for-react": "^1.0.2",
     "antd-mobile": "^2.2.2",
     "antd-mobile-icons": "^0.2.2",
     "antd-mobile-v5": "npm:antd-mobile@^5.10.1",
@@ -40,6 +42,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "jquery": "^2.2.4",
     "mini-css-extract-plugin": "^2.4.5",
+    "path": "^0.12.7",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -47,6 +50,7 @@
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
     "proptypes": "^1.1.0",
+    "pubsub-js": "^1.9.4",
     "qs": "^6.5.2",
     "react": "^18.0.0",
     "react-app-polyfill": "^3.0.0",
